--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -34,6 +34,18 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.8
+  supabase_flutter: ^2.8.4
+  image_picker: ^1.1.2
+  firebase_core: ^3.13.0
+  firebase_messaging: ^15.2.5
+  flutter_screenutil: ^5.9.3
+  smooth_page_indicator: ^1.2.1
+  google_sign_in: ^6.3.0
+  google_maps_flutter: ^2.12.1
+  geolocator: ^14.0.0
+  duration: ^4.0.3
+  intl: ^0.20.2
+  supabase: ^2.6.3
 
 dev_dependencies:
   flutter_test:
